--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="5dp">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp" />
 
-    <solid android:color="@color/app_grey_dark"/>
+    <solid android:color="@color/app_blue_dark"/>
 
     <stroke
-        android:color="@color/app_green"
+        android:color="@color/app_brown"
         android:width="2dp"/>
+
+    <padding
+        android:bottom="5dp"
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp"/>
 
 </shape>
