--- a/app/src/main/res/layout-w900dp/estate_detail.xml
+++ b/app/src/main/res/layout-w900dp/estate_detail.xml
@@ -87,7 +87,7 @@
                     android:layout_margin="20dp"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/square"
+                    app:drawableStartCompat="@drawable/ic_baseline_settings_overscan_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_rooms"
                     app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
                     android:layout_margin="20sp"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/rooms"
+                    app:drawableStartCompat="@drawable/ic_outline_space_dashboard_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_land_size"
                     app:layout_constraintStart_toEndOf="@id/tv_detail_surface"
@@ -116,7 +116,7 @@
                     android:text="@string/landsize"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/landsize"
+                    app:drawableStartCompat="@drawable/ic_baseline_panorama_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_bathrooms"
                     app:layout_constraintStart_toEndOf="@id/tv_detail_rooms"
@@ -130,7 +130,7 @@
                     android:text="@string/bathrooms"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/bathrooms"
+                    app:drawableStartCompat="@drawable/ic_baseline_bathtub_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_bedrooms"
                     app:layout_constraintStart_toEndOf="@id/tv_detail_land_size"
@@ -144,7 +144,7 @@
                     android:text="@string/bedrooms"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    app:drawableStartCompat="@drawable/bedrooms"
+                    app:drawableStartCompat="@drawable/ic_baseline_bed_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_detail_bathrooms"
