--- a/app/src/main/res/drawable/background_style.xml
+++ b/app/src/main/res/drawable/background_style.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid android:color="@color/app_grey_dark"/>
+    <solid android:color="@color/app_blue"/>
     <stroke
         android:color="@color/silver"
         android:width="2dp"/>
