--- a/app/src/main/res/drawable/baseline_park_24.xml
+++ b/app/src/main/res/drawable/baseline_park_24.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#CABF67">
+    android:tint="@color/all_item">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M17,12l2,0l-7,-10l-6.95,10l1.95,0l-3.9,6l6.92,0l0,4l3.96,0l0,-4l7.02,0z"/>
