--- a/app/src/main/res/drawable/ic_baseline_bed_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_bed_24.xml
@@ -1,5 +1,5 @@
 <vector android:height="24dp"
-    android:tint="@color/purple"
+    android:tint="@color/all_item"
     android:viewportHeight="24"
     android:viewportWidth="24"
     android:width="24dp"
