--- a/app/src/main/res/drawable/ic_baseline_holiday_village_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_holiday_village_24.xml
@@ -4,7 +4,5 @@
     android:viewportWidth="24"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <path android:fillColor="@android:color/white"
-        android:pathData="M4,5v13h17L21,5L4,5zM6,16L6,7h3v9L6,16zM11,16v-3.5h3L14,16h-3zM19,16h-3v-3.5h3L19,16zM11,10.5L11,7h8v3.5h-8z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M18,20V8.35L13.65,4h-2.83L16,9.18V20H18zM22,20V6.69L19.31,4h-2.83L20,7.52V20H22zM8,4l-6,6v10h5v-5h2v5h5V10L8,4zM9,13H7v-2h2V13z"/>
 </vector>
