--- a/app/src/main/res/drawable/ic_baseline_panorama_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_panorama_24.xml
@@ -4,7 +4,5 @@
     android:viewportWidth="24"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <path android:fillColor="@android:color/white"
-        android:pathData="M4,5v13h17L21,5L4,5zM6,16L6,7h3v9L6,16zM11,16v-3.5h3L14,16h-3zM19,16h-3v-3.5h3L19,16zM11,10.5L11,7h8v3.5h-8z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M23,18V6c0,-1.1 -0.9,-2 -2,-2H3c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2zM8.5,12.5l2.5,3.01L14.5,11l4.5,6H5l3.5,-4.5z"/>
 </vector>
