--- a/app/src/main/res/drawable/ic_outline_space_dashboard_24.xml
+++ b/app/src/main/res/drawable/ic_outline_space_dashboard_24.xml
@@ -4,7 +4,5 @@
     android:viewportWidth="24"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <path android:fillColor="@android:color/white"
-        android:pathData="M4,5v13h17L21,5L4,5zM6,16L6,7h3v9L6,16zM11,16v-3.5h3L14,16h-3zM19,16h-3v-3.5h3L19,16zM11,10.5L11,7h8v3.5h-8z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M19,3H5C3.9,3 3,3.9 3,5v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5C21,3.9 20.1,3 19,3zM5,19V5h6v14H5zM19,19h-6v-7h6V19zM19,10h-6V5h6V10z"/>
 </vector>
