--- a/app/src/main/res/layout-w900dp/fragment_add_part_two.xml
+++ b/app/src/main/res/layout-w900dp/fragment_add_part_two.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_add_bathrooms"
-        app:startIconDrawable="@drawable/bedrooms"
+        app:startIconDrawable="@drawable/ic_baseline_bed_24"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp">
 
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toEndOf="@id/tv_add_bedrooms"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:startIconDrawable="@drawable/bathrooms"
+        app:startIconDrawable="@drawable/ic_baseline_bathtub_24"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp">
 
@@ -59,7 +59,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_realtor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_bathrooms"
-        app:startIconDrawable="@drawable/text"
+        app:startIconDrawable="@drawable/ic_baseline_text_snippet_24"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp">
 
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/realtor"
-        app:startIconDrawable="@drawable/realtor"
+        app:startIconDrawable="@drawable/ic_baseline_face_24"
         app:layout_constraintBottom_toTopOf="@id/bt_two_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_description"
