--- a/app/src/main/res/layout-w900dp/fragment_query_search.xml
+++ b/app/src/main/res/layout-w900dp/fragment_query_search.xml
@@ -25,9 +25,10 @@
                 android:id="@+id/cb_search_on_sale"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_margin="30dp"
                 android:checked="true"
                 android:text="@string/sale"
+                android:textColor="@color/silver"
                 android:gravity="center"
                 app:layout_constraintEnd_toStartOf="@id/cb_search_sold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,10 +39,11 @@
                 android:id="@+id/cb_search_sold"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
+                android:layout_margin="30dp"
                 android:checked="false"
                 android:text="@string/sold"
                 android:gravity="center"
+                android:textColor="@color/silver"
                 android:background="@drawable/button_style"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cb_search_on_sale"
@@ -49,19 +51,22 @@
 
             <Button
                 android:id="@+id/bt_search_type"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/type"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="30dp"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_district"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cb_search_on_sale"/>
 
             <TableLayout
                 android:id="@+id/tl_query_type"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/bt_search_type">
+                app:layout_constraintTop_toBottomOf="@id/bt_search_type"
+                app:layout_constraintStart_toStartOf="@id/bt_search_type"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_type">
 
                 <TableRow android:gravity="center">
 
@@ -104,21 +109,25 @@
 
             <Button
                 android:id="@+id/bt_search_district"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/district"
-                app:layout_constraintTop_toBottomOf="@id/tl_query_type"
+                android:layout_margin="30dp"
+                app:layout_constraintStart_toEndOf="@id/bt_search_type"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cb_search_on_sale"
                 app:layout_constraintBottom_toTopOf="@id/til_query_district"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_query_district"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:hint="@string/district"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@id/bt_search_district"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_district"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_district"
                 app:startIconDrawable="@drawable/ic_baseline_holiday_village_24"
                 android:visibility="gone">
 
@@ -131,20 +140,21 @@
 
             <Button
                 android:id="@+id/bt_search_price"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/price"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="30dp"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_surface"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/til_query_district"/>
+                app:layout_constraintTop_toBottomOf="@id/tl_query_type"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_price"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_price"
+                app:layout_constraintStart_toStartOf="@id/bt_search_price"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_price">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -189,20 +199,21 @@
 
             <Button
                 android:id="@+id/bt_search_surface"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/surface"
+                android:layout_margin="30dp"
+                app:layout_constraintStart_toEndOf="@id/bt_search_price"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_price"/>
+                app:layout_constraintTop_toBottomOf="@id/til_query_district"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_surface"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_surface"
+                app:layout_constraintStart_toStartOf="@id/bt_search_surface"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_surface">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -246,20 +257,21 @@
 
             <Button
                 android:id="@+id/bt_search_room"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/rooms"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="30dp"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_bedroom"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_surface"/>
+                app:layout_constraintTop_toBottomOf="@id/cl_search_price"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_room"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_room"
+                app:layout_constraintStart_toStartOf="@id/bt_search_room"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_room">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -304,20 +316,21 @@
 
             <Button
                 android:id="@+id/bt_search_bedroom"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/bedrooms"
+                android:layout_margin="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_room"/>
+                app:layout_constraintStart_toEndOf="@id/bt_search_room"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_surface"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_bedroom"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_bedroom"
+                app:layout_constraintStart_toStartOf="@id/bt_search_bedroom"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_bedroom">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -361,20 +374,21 @@
 
             <Button
                 android:id="@+id/bt_search_bathroom"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/bathrooms"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="30dp"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_landsize"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_bedroom" />
+                app:layout_constraintTop_toBottomOf="@id/cl_search_room" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_bathroom"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_bathroom"
+                app:layout_constraintStart_toStartOf="@id/bt_search_bathroom"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_bathroom">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -419,20 +433,21 @@
 
             <Button
                 android:id="@+id/bt_search_landsize"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/landsize"
+                android:layout_margin="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_bathroom" />
+                app:layout_constraintStart_toEndOf="@id/bt_search_bathroom"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_bedroom" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_landsize"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_landsize"
+                app:layout_constraintStart_toStartOf="@id/bt_search_landsize"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_landsize">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -478,17 +493,22 @@
 
             <Button
                 android:id="@+id/bt_search_interest"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/point_of_interest"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_landsize" />
+                android:layout_margin="30dp"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_bathroom"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_entry_date"/>
 
             <TableLayout
                 android:id="@+id/tl_search_interest"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/bt_search_interest">
+                app:layout_constraintTop_toBottomOf="@id/bt_search_interest"
+                app:layout_constraintStart_toStartOf="@id/bt_search_interest"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_interest">
 
                 <TableRow>
 
@@ -559,19 +579,22 @@
 
             <Button
                 android:id="@+id/bt_search_entry_date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/date_of_entry"
+                android:layout_margin="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tl_search_interest" />
+                app:layout_constraintStart_toEndOf="@id/bt_search_interest"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_landsize" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_entry_date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/bt_search_entry_date">
+                app:layout_constraintTop_toBottomOf="@id/bt_search_entry_date"
+                app:layout_constraintStart_toStartOf="@id/bt_search_entry_date"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_entry_date">
 
                 <RadioGroup
                     android:id="@+id/rg_search_entry"
@@ -617,21 +640,24 @@
 
             <Button
                 android:id="@+id/bt_search_sold_date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sold_date"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="30dp"
+                app:layout_constraintEnd_toStartOf="@id/bt_search_photo"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_entry_date"
+                app:layout_constraintTop_toBottomOf="@id/tl_search_interest"
                 tools:visibility="visible" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_search_sold_date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/bt_search_sold_date">
+                app:layout_constraintTop_toBottomOf="@id/bt_search_sold_date"
+                app:layout_constraintStart_toStartOf="@id/bt_search_sold_date"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_sold_date">
 
                 <RadioGroup
                     android:id="@+id/rg_search_sold"
@@ -676,21 +702,25 @@
 
             <Button
                 android:id="@+id/bt_search_photo"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/photo_of_estate"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_sold_date" />
+                android:layout_margin="30dp"
+                app:layout_constraintStart_toEndOf="@id/bt_search_sold_date"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_entry_date" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_query_photo_min"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:hint="@string/min_photo"
                 android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@id/bt_search_photo"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_photo"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_photo"
                 app:startIconDrawable="@drawable/ic_baseline_camera_alt_24">
 
                 <com.google.android.material.textfield.TextInputEditText
