--- a/app/src/main/res/layout/estate_detail.xml
+++ b/app/src/main/res/layout/estate_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:tag="fragment_detail">
+    android:tag="fragment_detail"
+    android:background="@drawable/background_style">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,7 +23,6 @@
                 android:background="@drawable/button_style"
                 android:gravity="center"
                 android:text="@string/sold"
-                android:textColor="@color/ocherDark"
                 android:textSize="50sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/rv_detail_photo"
@@ -103,7 +103,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
-                            app:drawableStartCompat="@drawable/square"
+                            app:drawableStartCompat="@drawable/ic_baseline_settings_overscan_24"
                             app:layout_constraintEnd_toStartOf="@id/tv_detail_rooms"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -135,7 +135,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/landsize"
                             android:textSize="15sp"
-                            app:drawableStartCompat="@drawable/landsize"
+                            app:drawableStartCompat="@drawable/ic_baseline_panorama_24"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/tv_detail_rooms"/>
