--- a/app/src/main/res/layout/estate_list_content.xml
+++ b/app/src/main/res/layout/estate_list_content.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/photo_of_estate"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
@@ -26,15 +27,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/sold"
-        android:textColor="@color/ocherDark"
         android:gravity="center"
-        android:textStyle="bold"
+        android:textStyle="bold|italic"
         android:textSize="25sp"
         android:visibility="gone"
         tools:visibility="visible"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/button_style"
+        android:elevation="10dp"
         app:layout_constraintStart_toStartOf="@id/iv_estate_content"
         app:layout_constraintEnd_toEndOf="@id/iv_estate_content"
         app:layout_constraintBottom_toBottomOf="@id/iv_estate_content"/>
@@ -47,7 +48,11 @@
         tools:text="Penthouse"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:textColor="@color/gold"
+        android:textColor="@color/app_blue"
+        android:shadowColor="@color/app_grey_dark"
+        android:shadowDx="2.5"
+        android:shadowDy="2.5"
+        android:shadowRadius="2.6"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_content_district"/>
@@ -59,9 +64,13 @@
         tools:text="Manhattan"
         android:textStyle="italic"
         android:textSize="20sp"
-        android:textColor="@color/gold"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:textColor="@color/app_blue"
+        android:shadowColor="@color/app_grey_dark"
+        android:shadowDx="2.5"
+        android:shadowDy="2.5"
+        android:shadowRadius="2.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_content_price"/>
 
@@ -72,10 +81,14 @@
         tools:text="1 000 000 $"
         android:textStyle="normal"
         android:textSize="22sp"
-        android:textColor="@color/gold"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:textColor="@color/app_blue"
+        android:shadowColor="@color/app_grey_dark"
+        android:shadowDx="2.5"
+        android:shadowDy="2.5"
+        android:shadowRadius="2.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
