--- a/app/src/main/res/layout/fragment_add_address.xml
+++ b/app/src/main/res/layout/fragment_add_address.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_complement"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/number">
+        app:startIconDrawable="@drawable/ic_baseline_123_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_number"
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_street"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_number"
-        app:startIconDrawable="@drawable/complement">
+        app:startIconDrawable="@drawable/ic_baseline_library_books_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_complement"
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_district"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_complement"
-        app:startIconDrawable="@drawable/street">
+        app:startIconDrawable="@drawable/ic_baseline_add_road_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_street"
@@ -79,7 +79,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_city"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_street"
-        app:startIconDrawable="@drawable/district">
+        app:startIconDrawable="@drawable/ic_baseline_holiday_village_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_district"
@@ -100,7 +100,7 @@
         app:layout_constraintBottom_toTopOf="@id/bt_address_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_district"
-        app:startIconDrawable="@drawable/city">
+        app:startIconDrawable="@drawable/ic_baseline_location_city_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_city"
