--- a/app/src/main/res/layout/fragment_add_part_one.xml
+++ b/app/src/main/res/layout/fragment_add_part_one.xml
@@ -17,7 +17,6 @@
         android:switchPadding="15dp"
         android:text="@string/on_sale"
         android:textSize="25sp"
-        android:textColor="@color/silver"
         app:layout_constraintBottom_toTopOf="@id/tv_add_type"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +31,7 @@
         android:text="@string/type"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:drawableStartCompat="@drawable/type"
+        app:drawableStartCompat="@drawable/ic_baseline_home_work_24"
         app:layout_constraintBottom_toBottomOf="@id/sp_add_type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/sp_add_type"
@@ -61,7 +60,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_surface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sp_add_type"
-        app:startIconDrawable="@drawable/dollar">
+        app:startIconDrawable="@drawable/ic_baseline_attach_money_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_price"
@@ -82,7 +81,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_rooms"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_price"
-        app:startIconDrawable="@drawable/square">
+        app:startIconDrawable="@drawable/ic_baseline_settings_overscan_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_surface"
@@ -100,7 +99,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_add_landsize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_surface"
-        app:startIconDrawable="@drawable/rooms">
+        app:startIconDrawable="@drawable/ic_outline_space_dashboard_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_rooms"
@@ -119,7 +118,7 @@
         app:layout_constraintBottom_toTopOf="@id/bt_one_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_add_rooms"
-        app:startIconDrawable="@drawable/landsize">
+        app:startIconDrawable="@drawable/ic_baseline_panorama_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_add_landsize"
