--- a/app/src/main/res/layout/image_list_content.xml
+++ b/app/src/main/res/layout/image_list_content.xml
@@ -26,8 +26,12 @@
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem"
         android:gravity="center_horizontal"
-        android:textColor="@color/gold"
         android:textSize="20sp"
+        android:textColor="@color/app_blue"
+        android:shadowColor="@color/app_grey_dark"
+        android:shadowDx="2.5"
+        android:shadowDy="2.5"
+        android:shadowRadius="2.6"
         android:layout_margin="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
