--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,15 +13,15 @@
 
 <!--        <item name="colorPrimary">@color/englishGreen</item>-->
 <!--        <item name="colorPrimaryVariant">@color/englishGreenDark</item>-->
-        <item name="colorPrimary">@color/app_grey</item>
-        <item name="colorPrimaryVariant">@color/app_grey_dark</item>
-        <item name="colorOnPrimary">@color/gold</item>
+        <item name="colorPrimary">@color/app_blue</item>
+        <item name="colorPrimaryVariant">@color/app_blue_dark</item>
+        <item name="colorOnPrimary">@color/black</item>
 
-        <item name="colorSecondary">@color/app_green</item>
-        <item name="colorSecondaryVariant">@color/app_green_dark</item>
-        <item name="colorOnSecondary">@color/silver</item>
+        <item name="colorSecondary">@color/app_grey</item>
+        <item name="colorSecondaryVariant">@color/app_grey_dark</item>
+        <item name="colorOnSecondary">@color/app_brown</item>
 
-        <item name="android:textColor">@color/silver</item>
+        <item name="android:textColor">@color/app_grey_dark</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
@@ -36,14 +36,14 @@
         <item name="android:textAlignment">center</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/silver</item>
+        <item name="android:textColor">@color/app_grey_dark</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_margin">5dp</item>
     </style>
     
     <style name="checkBox_landscape_app">
         <item name="android:textSize">30sp</item>
-        <item name="android:textColor">@color/silver</item>
+        <item name="android:textColor">@color/app_grey_dark</item>
         <item name="android:layout_marginStart">20dp</item>
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:layout_width">wrap_content</item>
@@ -55,7 +55,7 @@
         <item name="android:textAlignment">center</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/silver</item>
+        <item name="android:textColor">@color/app_grey_dark</item>
         <item name="android:padding">20dp</item>
         <item name="android:layout_marginBottom">50dp</item>
         <item name="android:layout_width">wrap_content</item>
