--- a/app/src/main/res/drawable/background_style.xml
+++ b/app/src/main/res/drawable/background_style.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <solid android:color="@color/app_blue"/>
     <stroke
-        android:color="@color/silver"
-        android:width="2dp"/>
+        android:color="@color/green_700"
+        android:width="3dp"/>
+
+    <solid android:color="@color/white"/>
 
 </shape>
