--- a/app/src/main/res/layout-w900dp/estate_detail.xml
+++ b/app/src/main/res/layout-w900dp/estate_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
+    android:background="@drawable/background_style"
     android:tag="fragment_detail">
 
     <ScrollView
@@ -56,7 +57,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:textSize="30sp"
+                android:textColor="@color/black"
+                android:textSize="35sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rv_detail_photo"
                 tools:text="Penthous 7 rooms 200 m2" />
@@ -65,8 +68,11 @@
                 android:id="@+id/tv_detail_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="15dp"
+                android:textColor="@color/black"
                 android:textSize="30sp"
+                android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_detail_fast_description"
                 tools:text="3 000 000 $" />
@@ -82,11 +88,7 @@
 
                 <TextView
                     android:id="@+id/tv_detail_surface"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
+                    style="@style/detail_landscape_info"
                     app:drawableStartCompat="@drawable/ic_baseline_settings_overscan_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_rooms"
@@ -96,11 +98,7 @@
 
                 <TextView
                     android:id="@+id/tv_detail_rooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
+                    style="@style/detail_landscape_info"
                     app:drawableStartCompat="@drawable/ic_outline_space_dashboard_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_land_size"
@@ -110,12 +108,8 @@
 
                 <TextView
                     android:id="@+id/tv_detail_land_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    style="@style/detail_landscape_info"
                     android:text="@string/landsize"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
                     app:drawableStartCompat="@drawable/ic_baseline_panorama_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_bathrooms"
@@ -124,12 +118,8 @@
 
                 <TextView
                     android:id="@+id/tv_detail_bathrooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    style="@style/detail_landscape_info"
                     android:text="@string/bathrooms"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
                     app:drawableStartCompat="@drawable/ic_baseline_bathtub_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_detail_bedrooms"
@@ -138,12 +128,8 @@
 
                 <TextView
                     android:id="@+id/tv_detail_bedrooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    style="@style/detail_landscape_info"
                     android:text="@string/bedrooms"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
                     app:drawableStartCompat="@drawable/ic_baseline_bed_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -158,9 +144,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/button_style"
+                android:gravity="center"
                 android:padding="10dp"
                 android:text="@string/description"
-                android:textColor="@color/purple"
+                android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -171,9 +158,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:maxLines="5"
                 android:padding="5dp"
-                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:textSize="22sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/bt_detail_title_description"
                 tools:text="@tools:sample/lorem/random" />
@@ -196,55 +183,31 @@
 
                     <TextView
                         android:id="@+id/tv_detail_school"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/school"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_school_24"
                         tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_detail_store"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/store"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_storefront_24"
                         tools:visibility="visible" />
 
 
                     <TextView
                         android:id="@+id/tv_detail_park"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/park"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_park_24"
                         tools:visibility="visible" />
 
 
                     <TextView
                         android:id="@+id/tv_detail_restaurant"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/restaurant"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_restaurant_24"
                         tools:visibility="visible" />
 
@@ -254,54 +217,30 @@
 
                     <TextView
                         android:id="@+id/tv_detail_movie"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/movie_theatre"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_theaters_24"
                         tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_detail_theatre"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/theatre"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_theater_comedy_24"
                         tools:visibility="visible" />
 
 
                     <TextView
                         android:id="@+id/tv_detail_subway"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/subway"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_directions_subway_24"
                         tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_detail_nightlife"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:padding="5dp"
+                        style="@style/detail_landscape_interest"
                         android:text="@string/nightlife"
-                        android:textSize="20sp"
-                        android:visibility="gone"
                         app:drawableStartCompat="@drawable/baseline_nightlife_24"
                         tools:visibility="visible" />
                 </TableRow>
@@ -314,11 +253,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="35dp"
-                android:padding="30dp"
+                android:padding="25dp"
                 android:textSize="25sp"
-                app:layout_constraintBottom_toTopOf="@id/cl2"
-                app:layout_constraintStart_toStartOf="@id/cl2"
-                app:layout_constraintTop_toBottomOf="@id/tl_detail_interest"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@id/iv_detail_map"
+                app:layout_constraintEnd_toStartOf="@id/iv_detail_map"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_detail_map"
                 tools:text="123 Appt75 \nMain street\nCentral park\n60006 NewYork" />
 
             <ImageView
@@ -336,19 +277,21 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/tv_detail_map_address"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/iv_detail_map"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_margin="30dp"
                 android:padding="30dp"
-                android:layout_margin="20dp">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_detail_map">
 
                 <TextView
                     android:id="@+id/tv_detail_realtor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/tv_detail_entry_date"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Realtor : Antoine Daniel" />
@@ -357,8 +300,10 @@
                     android:id="@+id/tv_detail_entry_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_detail_realtor"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/tv_detail_mod_date"
+                    app:layout_constraintStart_toEndOf="@id/tv_detail_realtor"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="Entry date : 01/01/1999" />
 
                 <TextView
@@ -366,8 +311,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_detail_entry_date"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toStartOf="@id/tv_detail_sold_date"
+                    app:layout_constraintStart_toEndOf="@id/tv_detail_entry_date"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="Modification : 02/02/1999"
                     tools:visibility="visible" />
 
@@ -376,11 +323,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_detail_mod_date"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_detail_mod_date"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="Sold on : 03/03/1999"
                     tools:visibility="visible" />
-                <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
