--- a/app/src/main/res/layout-w900dp/fragment_add_photo.xml
+++ b/app/src/main/res/layout-w900dp/fragment_add_photo.xml
@@ -16,10 +16,23 @@
         android:elevation="10dp"
         android:indeterminate="true"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_add_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_in_progress"
+        android:textSize="50sp"
+        android:elevation="10dp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/pb_add_upload"
+        app:layout_constraintStart_toStartOf="@id/pb_add_upload"
+        app:layout_constraintEnd_toEndOf="@id/pb_add_upload"/>
 
     <Button
         android:id="@+id/bt_add_gallery"
