--- a/app/src/main/res/layout-w900dp/fragment_query_search.xml
+++ b/app/src/main/res/layout-w900dp/fragment_query_search.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toTopOf="@id/bt_search_cancel"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,7 +28,6 @@
                 android:layout_margin="30dp"
                 android:checked="true"
                 android:text="@string/sale"
-                android:textColor="@color/silver"
                 android:gravity="center"
                 app:layout_constraintEnd_toStartOf="@id/cb_search_sold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +42,6 @@
                 android:checked="false"
                 android:text="@string/sold"
                 android:gravity="center"
-                android:textColor="@color/silver"
                 android:background="@drawable/button_style"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cb_search_on_sale"
@@ -64,6 +62,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_type"
                 app:layout_constraintStart_toStartOf="@id/bt_search_type"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_type">
@@ -124,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
                 android:hint="@string/district"
                 app:layout_constraintStart_toStartOf="@id/bt_search_district"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_district"
@@ -153,6 +153,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_price"
                 app:layout_constraintStart_toStartOf="@id/bt_search_price"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_price">
@@ -212,6 +213,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_surface"
                 app:layout_constraintStart_toStartOf="@id/bt_search_surface"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_surface">
@@ -270,6 +272,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_room"
                 app:layout_constraintStart_toStartOf="@id/bt_search_room"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_room">
@@ -329,6 +332,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_bedroom"
                 app:layout_constraintStart_toStartOf="@id/bt_search_bedroom"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_bedroom">
@@ -387,6 +391,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_bathroom"
                 app:layout_constraintStart_toStartOf="@id/bt_search_bathroom"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_bathroom">
@@ -446,6 +451,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_landsize"
                 app:layout_constraintStart_toStartOf="@id/bt_search_landsize"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_landsize">
@@ -506,6 +512,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_interest"
                 app:layout_constraintStart_toStartOf="@id/bt_search_interest"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_interest">
@@ -592,6 +599,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_entry_date"
                 app:layout_constraintStart_toStartOf="@id/bt_search_entry_date"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_entry_date">
@@ -609,12 +617,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/before" />
-
-                    <!--                    <RadioButton-->
-                    <!--                        android:id="@+id/rb_search_entry_at"-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:text="@string/at" />-->
 
                     <RadioButton
                         android:id="@+id/rb_search_entry_after"
@@ -644,10 +646,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/sold_date"
                 android:visibility="gone"
-                android:layout_margin="30dp"
-                app:layout_constraintEnd_toStartOf="@id/bt_search_photo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tl_search_interest"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_entry_date"
+                app:layout_constraintStart_toStartOf="@id/bt_search_entry_date"
+                app:layout_constraintTop_toBottomOf="@id/cl_search_entry_date"
                 tools:visibility="visible" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -655,6 +658,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
+                android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/bt_search_sold_date"
                 app:layout_constraintStart_toStartOf="@id/bt_search_sold_date"
                 app:layout_constraintEnd_toEndOf="@id/bt_search_sold_date">
@@ -672,12 +676,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/before" />
-
-                    <!--                    <RadioButton-->
-                    <!--                        android:id="@+id/rb_search_sold_at"-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:text="@string/at" />-->
 
                     <RadioButton
                         android:id="@+id/rb_search_sold_after"
@@ -705,15 +703,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/photo_of_estate"
-                android:layout_margin="30dp"
-                app:layout_constraintStart_toEndOf="@id/bt_search_sold_date"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_search_entry_date" />
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintStart_toStartOf="@id/bt_search_interest"
+                app:layout_constraintEnd_toEndOf="@id/bt_search_interest"
+                app:layout_constraintTop_toBottomOf="@id/tl_search_interest" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_query_photo_min"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:hint="@string/min_photo"
@@ -740,7 +740,8 @@
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/bt_search_search"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"/>
 
     <Button
         android:id="@+id/bt_search_search"
@@ -749,6 +750,7 @@
         android:text="@string/search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/bt_search_cancel" />
+        app:layout_constraintStart_toEndOf="@id/bt_search_cancel"
+        android:layout_margin="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
