--- a/app/src/main/res/layout/estate_list_content.xml
+++ b/app/src/main/res/layout/estate_list_content.xml
@@ -36,6 +36,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/button_style"
         android:elevation="10dp"
+        android:textColor="@color/ocherDark"
         app:layout_constraintStart_toStartOf="@id/iv_estate_content"
         app:layout_constraintEnd_toEndOf="@id/iv_estate_content"
         app:layout_constraintBottom_toBottomOf="@id/iv_estate_content"/>
