--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -21,6 +21,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_add_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_in_progress"
+        android:textSize="30sp"
+        android:elevation="10dp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/pb_add_upload"
+        app:layout_constraintStart_toStartOf="@id/pb_add_upload"
+        app:layout_constraintEnd_toEndOf="@id/pb_add_upload"/>
+
     <Button
         android:id="@+id/bt_add_gallery"
         android:layout_width="wrap_content"
