--- a/app/src/main/res/layout/image_list_content.xml
+++ b/app/src/main/res/layout/image_list_content.xml
@@ -7,7 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_margin="5dp"
     android:padding="3dp"
-    android:background="@color/silver">
+    android:background="@color/green_500">
 
     <ImageView
         android:id="@+id/iv_content_list"
@@ -33,6 +33,7 @@
         android:shadowDy="2.5"
         android:shadowRadius="2.6"
         android:layout_margin="3dp"
+        android:background="#4081c784"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/iv_content_list"
