--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,22 +11,16 @@
 
     <style name="Theme.RealEstateManager" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
-<!--        <item name="colorPrimary">@color/englishGreen</item>-->
-<!--        <item name="colorPrimaryVariant">@color/englishGreenDark</item>-->
-        <item name="colorPrimary">@color/app_blue</item>
-        <item name="colorPrimaryVariant">@color/app_blue_dark</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/green_500</item>
+        <item name="colorPrimaryVariant">@color/green_700</item>
+        <item name="colorOnPrimary">@color/white</item>
 
-        <item name="colorSecondary">@color/app_grey</item>
-        <item name="colorSecondaryVariant">@color/app_grey_dark</item>
-        <item name="colorOnSecondary">@color/app_brown</item>
-
-        <item name="android:textColor">@color/app_grey_dark</item>
+        <item name="colorSecondary">@color/purple_400</item>
+        <item name="colorSecondaryVariant">@color/purple_600</item>
+        <item name="colorOnSecondary">@color/black</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
-
-<!--        <item name="android:fontFamily">@font/tangerine_bold</item>-->
         <item name="materialButtonStyle">@style/estate_button_style</item>
 
     </style>
@@ -62,5 +56,24 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="detail_landscape_info">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="detail_landscape_interest">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:visibility">gone</item>
+    </style>
 
 </resources>
