--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -30,6 +30,7 @@
         android:elevation="10dp"
         android:textStyle="bold"
         android:visibility="gone"
+        android:textColor="@color/purple_600"
         app:layout_constraintTop_toBottomOf="@id/pb_add_upload"
         app:layout_constraintStart_toStartOf="@id/pb_add_upload"
         app:layout_constraintEnd_toEndOf="@id/pb_add_upload"/>
