--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,8 @@
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
+        <item name="android:textColor">@color/black</item>
+
         <item name="materialButtonStyle">@style/estate_button_style</item>
 
     </style>
